second review release bug fix

--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@
                 </li>
                 <li>
                     <div class="img"><a ><img width="781" height="274" alt="" src="images/banner_01.png"></a></div>
-                    <div class="desc"><p><span>{{html nn._([cms.global.PAGE_ID, 'channel-list', 'Sync with<strong>Youtube channel or playlist</strong> to get online videos.'])}}</span></p></div>
+                    <div class="desc"><p><span>{{html nn._([cms.global.PAGE_ID, 'channel-list', 'Sync with <strong>YouTube channel or playlist</strong> to get online videos.'])}}</span></p></div>
                 </li>
             </ul>
         </div>
