--- a/channel-add.html
+++ b/channel-add.html
@@ -164,6 +164,30 @@
 </div>
 <!-- Facebook Connect Failed2 Layer End -->
 
+<!-- Youtube sync alert overlay -->
+<div id="youtube-sync-alert-overlay" class="overlay-h172 youtube-sync-alert">
+    <div class="overlay-h172-left"></div>
+    <div class="overlay-h172-center">
+        <p class="btn-close"></p>
+        <img src="images/icon_warning_lg.png" alt="">
+        <p class="vMsg">This program will automatically synchronize information and videos from YouTube at 9 AM, 2 PM and 8 PM every day. Are you sure to auto sync?</p>
+        <div class="overlay-button-holder">
+            <div class="btn-gray">
+                <p class="left"></p>
+                <p id="no-sync" class="center btn-close">No</p>
+                <p class="right"></p>
+            </div>
+            <div class="btn-gray">
+                <p class="left"></p>
+                <p id="yes-sync" class="center ">Yes</p>
+                <p class="right"></p>
+            </div>
+        </div>
+    </div>
+    <div class="overlay-h172-right"></div>
+</div>
+<!-- Youtube sync alert overlay End-->
+
 <!-- content-main-tmpl Begin -->
 <script id="content-main-tmpl" type="text/x-jquery-tmpl">
 <div id="title-func" class="clearfix">
@@ -171,7 +195,7 @@
     {{if cms.global.vIsYoutubeSync === true}}
         {{html nn._([cms.global.PAGE_ID, 'title-func', 'Create a new YouTube Sync Program'])}}
     {{else}}
-        {{html nn._([cms.global.PAGE_ID, 'title-func', 'Create a new 9x9 program'])}}
+        {{html nn._([cms.global.PAGE_ID, 'title-func', 'Create a new 9x9 Program'])}}
     {{/if}}
     </h2>
     <p class="required"><acronym title="Required field" class="mark-required">*</acronym>${nn._([cms.global.PAGE_ID, 'title-func', 'Required field'])}</p>
