--- a/channel-setting.html
+++ b/channel-setting.html
@@ -139,6 +139,30 @@
 </div>
 <!-- Facebook Connect Failed2 Layer End -->
 
+<!-- Youtube sync alert overlay -->
+<div id="youtube-sync-alert-overlay" class="overlay-h172 youtube-sync-alert">
+    <div class="overlay-h172-left"></div>
+    <div class="overlay-h172-center">
+        <p class="btn-close"></p>
+        <img src="images/icon_warning_lg.png" alt="">
+        <p class="vMsg">This program will automatically synchronize information and videos from YouTube at 9 AM, 2 PM and 8 PM every day. Are you sure to auto sync?</p>
+        <div class="overlay-button-holder">
+            <div class="btn-gray">
+                <p class="left"></p>
+                <p id="no-sync" class="center btn-close">No</p>
+                <p class="right"></p>
+            </div>
+            <div class="btn-gray">
+                <p class="left"></p>
+                <p id="yes-sync" class="center ">Yes</p>
+                <p class="right"></p>
+            </div>
+        </div>
+    </div>
+    <div class="overlay-h172-right"></div>
+</div>
+<!-- Youtube sync alert overlay End-->
+
 <script id="func-nav-tmpl" type="text/x-jquery-tmpl">
 <li><a href="episode-list.html?id=${id}" class="episode">${nn._([cms.global.PAGE_ID, 'func-nav', 'Episode list'])}</a></li>
 {{if !cms.global.IS_REMARK}}
