--- a/episode-list.html
+++ b/episode-list.html
@@ -364,7 +364,7 @@
                     <span class="duration"><span class="time-right"><span class="time-middle">${cms.common.formatDuration(duration)}</span></span></span>
                 </div>
             </div>
-            <div class="check{{if true === cms.global.vIsYoutubeSync}} hide{{/if}}" data-meta="${id}">
+            <div class="check{{if true === cms.global.vIsYoutubeSync}} hide-00{{/if}}" data-meta="${id}">
                 <div class="btn" id="yuchk-btn-${id}"></div>
                 <div class="tip-white">
                     <p class="left"></p>
