YouTube sync order

--- a/channel-setting.html
+++ b/channel-setting.html
@@ -290,6 +290,21 @@
             </div>
         </div>
     </div>
+    {{if cms.global.vIsYoutubeSync === true}}
+    <div class="fminput clearfix">
+        <label>${nn._([cms.global.PAGE_ID, 'setting-form', 'Episode sort by'])}</label>
+        <div class="fmfield">
+            <div >
+            <label style="width:100%" for="st4">
+                <input type="radio" id="st4" name="sorting" value="4" {{if sorting != 5}}checked{{/if}}/> ${nn._([cms.global.PAGE_ID, 'setting-form', 'YouTube YouTube playlist or YouTube channel order'])}
+            </label><br />
+            <label style="width:100%" for="st5">
+                <input type="radio" id="st5" name="sorting" value="5" {{if sorting === 5}}checked{{/if}}/> ${nn._([cms.global.PAGE_ID, 'setting-form', 'YouTube playlist or YouTube channel reverse order'])}
+            </label>
+            </div>
+        </div>
+    </div>
+    {{/if}}
     <div class="fminput clearfix">
         <label>{{html nn._([cms.global.PAGE_ID, 'setting-form', 'Select brand to auto share'])}}</label>
         <div class="fmfield">
