--- a/channel-add.html
+++ b/channel-add.html
@@ -318,7 +318,7 @@
         <div class="fmfield">
             <div >
             <label style="width:100%" for="st4">
-                <input type="radio" id="st4" name="sorting" value="4" checked/> ${nn._([cms.global.PAGE_ID, 'setting-form', 'YouTube YouTube playlist or YouTube channel order'])}
+                <input type="radio" id="st4" name="sorting" value="4" checked/> ${nn._([cms.global.PAGE_ID, 'setting-form', 'YouTube playlist or YouTube channel order'])}
             </label><br />
             <label style="width:100%" for="st5">
                 <input type="radio" id="st5" name="sorting" value="5" /> ${nn._([cms.global.PAGE_ID, 'setting-form', 'YouTube playlist or YouTube channel reverse order'])}
