--- a/channel-setting.html
+++ b/channel-setting.html
@@ -296,7 +296,7 @@
         <div class="fmfield">
             <div >
             <label style="width:100%" for="st4">
-                <input type="radio" id="st4" name="sorting" value="4" {{if sorting != 5}}checked{{/if}}/> ${nn._([cms.global.PAGE_ID, 'setting-form', 'YouTube YouTube playlist or YouTube channel order'])}
+                <input type="radio" id="st4" name="sorting" value="4" {{if sorting != 5}}checked{{/if}}/> ${nn._([cms.global.PAGE_ID, 'setting-form', 'YouTube playlist or YouTube channel order'])}
             </label><br />
             <label style="width:100%" for="st5">
                 <input type="radio" id="st5" name="sorting" value="5" {{if sorting === 5}}checked{{/if}}/> ${nn._([cms.global.PAGE_ID, 'setting-form', 'YouTube playlist or YouTube channel reverse order'])}
