program setting about autoSync change to "on" / "off" from true / false this change for new feature of youtube sync invalid this field will be {"on" | "off" | "failed" }

--- a/channel-add.html
+++ b/channel-add.html
@@ -363,7 +363,7 @@
     </div>
     {{if cms.global.vIsYoutubeSync === true}}
     <div class="fminput clearfix">
-        <input type="hidden" id="autoSync" name="autoSync" value="false" />
+        <input type="hidden" id="autoSync" name="autoSync" value="off" />
         <label>{{html nn._([cms.global.PAGE_ID, 'setting-form', 'Auto sync with YouTube'])}}</label>
         <div class="fmfield">
             <div class="connected brand youtube-sync">
