--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@
 
 <!-- channel-list-tmpl-item Begin -->
 <script id="channel-list-tmpl-item" type="text/x-jquery-tmpl">
-<li id="program_${id}" class="clearfix chLi {{if true === isYoutubeSync}}ctypeYoutubeSync{{else}}ctype9x9{{/if}} {{if true === readonly}}inSyncing{{/if}}" data-meta="${id}">
+<li id="program_${id}" class="clearfix chLi {{if true === isYoutubeSync}}ctypeYoutubeSync{{else}}ctype9x9{{/if}} {{if 'failed' === autoSync}}isFailedYoutubeSync{{else}}{{if true === readonly}}inSyncing{{/if}}{{/if}}" data-meta="${id}">
 <div class="container">
 <div class="container-right">
 <div class="container-bottom">
