YouTube sync invalid ~ 1. popup message 2. user can click OK or x to close popup or wait for 4 secs. to close it .

--- a/index.html
+++ b/index.html
@@ -210,6 +210,20 @@
 </div>
 <!-- Unsave Prompt Layer End -->
 
+<!-- System Notice Layer Begin -->
+<div id="system-notice" class="lightbox-content overlay-l">
+    <div class="overlay-container">
+        <div class="overlay-wrap">
+            <a href="#" class="btn-close">Close</a>
+            <p class="content">Password reset success!</p>
+            <div class="overlay-btn">
+                <p class="btns btn-ok"><span><a href="#">OK</a></span></p>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- System Notice Layer End -->
+
 
 
 <!-- Create a new program overlay -->
