add Notification link to PCS Pages

--- a/brand-setting.html
+++ b/brand-setting.html
@@ -60,6 +60,8 @@
                 <li><a href="portal-manage.html" class="portal langkey">Main Channels</a></li>
                 <li><a href="store-promotion.html" class="store langkey">Program Store</a></li>
                 <li class="active"><a href="brand-setting.html" class="brand langkey">Brand Settings</a></li>
+                <li><a href="app-notification.html" class="notification langkey">Notification</a></li>
+
             </ul>
         </div>
     </div>
