--- a/portal-manage.html
+++ b/portal-manage.html
@@ -58,9 +58,10 @@
     <div id="content-nav">
         <div id="func-nav">
             <ul>
-                <li><a href="portal-manage.html" class="portal langkey">Main Channels</a></li>
+                <li class="active"><a href="portal-manage.html" class="portal langkey">Main Channels</a></li>
                 <li><a href="store-promotion.html" class="store langkey">Program Store</a></li>
                 <li><a href="brand-setting.html" class="brand langkey">Brand Settings</a></li>
+                <li><a href="app-notification.html" class="notification langkey">Notification</a></li>
             </ul>
         </div>
     </div>
