--- a/channel-add.html
+++ b/channel-add.html
@@ -225,12 +225,12 @@
     <div class="fminput clearfix">
         <label for="name"><acronym title="Required field" class="mark-required">*</acronym>${nn._([cms.global.PAGE_ID, 'setting-form', 'Title'])}</label>
         <div class="fmfield">
-            <p class="text{{if cms.global.vIsYoutubeSync === true}} disabled{{/if}}"><span>
-            <input type="text" name="name" id="name" maxlength="100" value="" class="text" {{if cms.global.vIsYoutubeSync === true}}disabled="disabled"{{/if}} /></span></p>
-            <span class="notice {{if cms.global.vIsYoutubeSync === true}}hide{{/if}}"><span id="name-charcounter">20</span>　${nn._([cms.global.PAGE_ID, 'setting-form', 'Best within 10 characters'])}</span>
+            <p class="text"><span>
+            <input type="text" name="name" id="name" maxlength="100" value="" class="text" /></span></p>
+            <span class="notice "><span id="name-charcounter">20</span>　${nn._([cms.global.PAGE_ID, 'setting-form', 'Best within 10 characters'])}</span>
         </div>
     </div>
-    <div class="fminput clearfix{{if cms.global.vIsYoutubeSync === true}} hide{{/if}}">
+    <div class="fminput clearfix">
         <label>${nn._([cms.global.PAGE_ID, 'setting-form', 'Program logo'])}</label>
         <div class="fmfield upload-img">
             <div class="thumbnail">
@@ -251,9 +251,9 @@
     <div class="fminput clearfix">
         <label>${nn._([cms.global.PAGE_ID, 'setting-form', 'Description'])}</label>
         <div class="fmfield">
-            <p class="textarea{{if cms.global.vIsYoutubeSync === true}} disabled{{/if}}"><span><span>
-            <textarea name="intro" id="intro" cols="80" class="textarea" {{if cms.global.vIsYoutubeSync === true}}disabled="disabled"{{/if}}></textarea></span></span></p>
-            <span class="notice {{if cms.global.vIsYoutubeSync === true}}hide{{/if}}"><span id="intro-charcounter">70</span>　${nn._([cms.global.PAGE_ID, 'setting-form', 'Best within 52 characters'])}</span>
+            <p class="textarea"><span><span>
+            <textarea name="intro" id="intro" cols="80" class="textarea" ></textarea></span></span></p>
+            <span class="notice "><span id="intro-charcounter">70</span>　${nn._([cms.global.PAGE_ID, 'setting-form', 'Best within 52 characters'])}</span>
         </div>
     </div>
     <div class="fminput clearfix">
