set playlist URL with disable style

--- a/channel-setting.html
+++ b/channel-setting.html
@@ -185,7 +185,7 @@
         <label for="name">
             <acronym title="Required field" class="mark-required">*</acronym>${nn._([cms.global.PAGE_ID, 'setting-form', 'Add Youtube channel or playlist URL'])}</label>
         <div class="fmfield">
-            <p class="text">
+            <p class="text disabled">
                 <span>
                     <input type="text" name="sourceUrl" id="ytUrl" maxlength="100" value="${sourceUrl}" class="text" disabled="disabled" >
                 </span>
