--- a/app-notification.html
+++ b/app-notification.html
@@ -171,7 +171,7 @@
 <!-- notify-intro-image-tmpl Begin -->
 <script id="notify-intro-image-tmpl" type="text/x-jquery-tmpl">
     <div class="notify-intro-image">         
-        <img src="images/notifiction_figure_en.png">
+        <img src="images/notifiction_figure_${cms.global.USER_DATA.lang}.png">
     </div>
 </script>
 <!-- notify-intro-image-tmpl End -->
