language text fix

--- a/app-notification.html
+++ b/app-notification.html
@@ -211,7 +211,7 @@
             <div class="form-group required-field">
                 <div class="form-label">${nn._([cms.global.PAGE_ID, 'notification', 'Notification message'])}</div>
                 <div class="form-elements">
-                   <textarea id="NotifyMessage" placeholder="${nn._([cms.global.PAGE_ID, 'notification', 'Input notificaion message...'])}"></textarea>                                              
+                   <textarea id="NotifyMessage" placeholder="${nn._([cms.global.PAGE_ID, 'notification', 'Input notification message...'])}"></textarea>                                              
                 </div> 
                 <span class="notice">${nn._([cms.global.PAGE_ID, 'notification', 'Tip : Input message within 17 Chinese characters or 34 English letters.'])}
                 </span>
