push notification message bind role

--- a/app-notification.html
+++ b/app-notification.html
@@ -163,7 +163,7 @@
 
 <!-- notify-intro-image-tmpl Begin -->
 <script id="notify-comm-tmpl" type="text/x-jquery-tmpl">
-    <a id="newNotify" href="#" class="normal-btn disable">+ ${nn._([cms.global.PAGE_ID, 'notification', 'Create a app notification'])}</a>
+    <a id="newNotify" href="#" class="normal-btn ${disableFix}">+ ${nn._([cms.global.PAGE_ID, 'notification', 'Create a app notification'])}</a>
     <div class="normal-margin">${extMsg}</div>
 </script>
 <!-- notify-intro-image-tmpl End -->
