--- a/portal-manage.html
+++ b/portal-manage.html
@@ -61,7 +61,7 @@
                 <li class="active"><a href="portal-manage.html" class="portal langkey">Main Channels</a></li>
                 <li><a href="store-promotion.html" class="store langkey">Program Store</a></li>
                 <li><a href="brand-setting.html" class="brand langkey">Brand Settings</a></li>
-                <li><a href="app-notification.html" class="notification langkey">Notification</a></li>
+                <li><a id="menuNotify" href="app-notification.html" class="notification langkey">Notification</a></li>
             </ul>
         </div>
     </div>
