language file update

--- a/lang/zh_YoutubeSyncTerms.html
+++ b/lang/zh_YoutubeSyncTerms.html
@@ -1,16 +1,16 @@
 <p>
-    1. 身為 9x9.tv 帳戶持有人，您得提交服務內容至本服務，包括影像與使用者評論，亦得將服務內容發佈在 9x9.tv 或 YouTube 等 9x9.tv 允許之內容來源。<strong>您已了解 9x9 不保障任何提交內容之機密。</strong>
+    1. 身為 FLIPr.tv 帳戶持有人，您得提交服務內容至本服務，包括影像與使用者評論，亦得將服務內容發佈在 FLIPr.tv 或 YouTube 等 FLIPr.tv 允許之內容來源。<strong>您已了解 FLIPr 不保障任何提交內容之機密。</strong>
 </p>
 <p>
-    2. <strong>您應對您提交的內容與提交與發佈內容之後果全權負責。您確認、聲明並證實，您擁有發佈此內容之必要授權、權利、同意、許可，並將根據本使用條款發佈於本服務之內容之專利、商標、營業秘密、著作權與其他專屬權利授權予 9x9.tv。</strong>
-</p>
-
-<p>
-    3. 茲此澄清，您對您所發佈之內容仍保有所有權；然而，提交此內容至 9x9.tv 即表示，<strong>您給予 9x9.tv 全球、非專屬、無版稅、再授權且可轉讓之權利，使用、複製、發佈與此服務及 9x9.tv（與其繼承人及關係企業）之企業相關之內容之權利，以及此內容衍生作品之製作權、展示權、執行權，包括但不限於依任何媒體形式及透過任何媒體管道促銷與重新發佈部分或所有服務內容（與衍申內容）之權利。</strong>你亦茲此授予本服務之使用者此內容之非專屬存取權，並得遵守本使用條款及透過本網站之功能，使用、複製、散佈、展示、執行此內容。上述之影片內容授權，於您自本服務移除或刪除影片後商業上合理之時間內中止。然而，您瞭解並同意 9x9.tv 得在伺服器上保留（但不得展示、散佈、執行）已移除或刪除之影片複本。
+    2. <strong>您應對您提交的內容與提交與發佈內容之後果全權負責。您確認、聲明並證實，您擁有發佈此內容之必要授權、權利、同意、許可，並將根據本使用條款發佈於本服務之內容之專利、商標、營業秘密、著作權與其他專屬權利授權予 FLIPr.tv。</strong>
 </p>
 
 <p>
-    4. <strong>您同意，除非經所有權人同意，或您擁有合法的張貼權，您提交至本服務之內容。含有第三方專屬之著作權作品或資訊，並將所有提交之內容授權予 9x9.tv。</strong>
+    3. 茲此澄清，您對您所發佈之內容仍保有所有權；然而，提交此內容至 FLIPr.tv 即表示，<strong>您給予 FLIPr.tv 全球、非專屬、無版稅、再授權且可轉讓之權利，使用、複製、發佈與此服務及 FLIPr.tv（與其繼承人及關係企業）之企業相關之內容之權利，以及此內容衍生作品之製作權、展示權、執行權，包括但不限於依任何媒體形式及透過任何媒體管道促銷與重新發佈部分或所有服務內容（與衍申內容）之權利。</strong>你亦茲此授予本服務之使用者此內容之非專屬存取權，並得遵守本使用條款及透過本網站之功能，使用、複製、散佈、展示、執行此內容。上述之影片內容授權，於您自本服務移除或刪除影片後商業上合理之時間內中止。然而，您瞭解並同意 FLIPr.tv 得在伺服器上保留（但不得展示、散佈、執行）已移除或刪除之影片複本。
+</p>
+
+<p>
+    4. <strong>您同意，除非經所有權人同意，或您擁有合法的張貼權，您提交至本服務之內容。含有第三方專屬之著作權作品或資訊，並將所有提交之內容授權予 FLIPr.tv。</strong>
 </p>
 
 <p>
@@ -18,5 +18,5 @@
 </p>
 
 <p>
-    6. 9x9.tv 不為任何使用者或其他授權人提交至本服務之內容，或表達之意見、推薦、建議提供背書，且免除所有與此內容相關之責任。<strong>9x9.tv 不允許本服務存在侵害著作權與著作權之內容，若得知有侵害他人智慧財產權之內容，將會移除該內容。9x9.tv 得在不事先告知的情況下，移除此內容。</strong>
+    6. FLIPr.tv 不為任何使用者或其他授權人提交至本服務之內容，或表達之意見、推薦、建議提供背書，且免除所有與此內容相關之責任。<strong>FLIPr.tv 不允許本服務存在侵害著作權與著作權之內容，若得知有侵害他人智慧財產權之內容，將會移除該內容。FLIPr.tv 得在不事先告知的情況下，移除此內容。</strong>
 </p>
