update 9x9.tv to FLIPr.tv

--- a/channel-add.html
+++ b/channel-add.html
@@ -11,7 +11,7 @@
 <link rel="stylesheet" href="stylesheets/lightbox.css?v=1278" />
 <link rel="stylesheet" href="stylesheets/uniform.css?v=1278" />
 <link rel="stylesheet" href="stylesheets/channel.css?v=1278" />
-<title>9x9.tv - Create a new program</title>
+<title>FLIPr.tv - Create a new program</title>
 </head>
 <body>
 <div id="fb-root"></div>
@@ -20,8 +20,8 @@
 <div id="header">
     <a href="../" target="_blank" id="logo"></a>
     <ul id="nav">
-        <li id="home"><span><a href="../" target="_blank">9x9.tv Official Web</a></span></li>
-        <li id="tv"><span><a href="../tv" target="_blank">Watch 9x9.tv on the Web</a></span></li>
+        <li id="home"><span><a href="../" target="_blank">FLIPr.tv Official Web</a></span></li>
+        <li id="tv"><span><a href="../tv" target="_blank">Watch FLIPr.tv on the Web</a></span></li>
         <li id="profile">
             <p id="btn-profile"></p>
             <p id="selected-profile">Guest</p>
@@ -65,7 +65,7 @@
 <!-- Footer Layer Begin -->
 <p id="footer-control" class="on"></p>
 <div id="footer">
-    <span>© 2013 9x9.tv. All rights reserved.</span>
+    <span>© 2013 FLIPr.tv. All rights reserved.</span>
     <ul id="footer-list">
         <li id="language-change">
             <p class="select-txt"><a href="javascript:void(0);" id="language">English</a></p>
@@ -195,7 +195,7 @@
     {{if cms.global.vIsYoutubeSync === true}}
         {{html nn._([cms.global.PAGE_ID, 'title-func', 'Create a new YouTube Sync Program'])}}
     {{else}}
-        {{html nn._([cms.global.PAGE_ID, 'title-func', 'Create a new 9x9 Program'])}}
+        {{html nn._([cms.global.PAGE_ID, 'title-func', 'Create a new FLIPr Program'])}}
     {{/if}}
     </h2>
     <p class="required"><acronym title="Required field" class="mark-required">*</acronym>${nn._([cms.global.PAGE_ID, 'title-func', 'Required field'])}</p>
