--- a/epcurate-curation.html
+++ b/epcurate-curation.html
@@ -45,7 +45,7 @@
 <script src="javascripts/v3/domready.curation.js?v=1278"></script>
 <script src="javascripts/v3/cms.youtube-utility.js"></script>
 <script src="javascripts/v3/cms.poi-utility.js"></script>
-<title>9x9.tv - Episode Curation - Curation</title>
+<title>FLIPr.tv - Episode Curation - Curation</title>
 </head>
 <body class="scrollable">
 
@@ -53,8 +53,8 @@
 <div id="header" class="hide">
     <a href="../" target="_blank" id="logo"></a>
     <ul id="nav">
-        <li id="home"><span><a href="../" target="_blank">9x9.tv Official Web</a></span></li>
-        <li id="tv"><span><a href="../tv" target="_blank">Watch 9x9.tv on the Web</a></span></li>
+        <li id="home"><span><a href="../" target="_blank">FLIPr.tv Official Web</a></span></li>
+        <li id="tv"><span><a href="../tv" target="_blank">Watch FLIPr.tv on the Web</a></span></li>
         <li id="profile">
             <p id="btn-profile"></p>
             <p id="selected-profile">Guest</p>
@@ -184,7 +184,7 @@
 <!-- Footer Layer Begin -->
 <p id="footer-control" class="hide"></p>
 <div id="footer" class="hide">
-    <span>© 2013 9x9.tv. All rights reserved.</span>
+    <span>© 2013 FLIPr.tv. All rights reserved.</span>
     <ul id="footer-list">
         <li id="language-change">
             <p class="select-txt"><a href="javascript:void(0);" id="language">English</a></p>
@@ -601,7 +601,7 @@
                     <div class="img hyper">
                         <h4>${nn._([cms.global.PAGE_ID, 'poi-event', 'Hyper Link'])}</h4>
                     </div>
-                    <p>${nn._([cms.global.PAGE_ID, 'poi-event', 'User can go to watch another 9x9.tv program or episode.'])}</p>
+                    <p>${nn._([cms.global.PAGE_ID, 'poi-event', 'User can go to watch another FLIPr.tv program or episode.'])}</p>
                 </div>
             </li>
             {{if !cms.global.IS_REMARK}}
@@ -672,8 +672,8 @@
                 </div>
                 <div class="fminput">
                     <label for="hyper_link"><acronym title="Required field" class="mark-required">*</acronym>${nn._([cms.global.PAGE_ID, 'poi-event', 'Hyper link'])}:</label>
-                    <p class="text"><span><input type="text" name="channelUrl" id="hyper_link" maxlength="100" value="${link}" placeholder="${nn._([cms.global.PAGE_ID, 'poi-event', 'Input 9x9 program or episode URL'])}" class="text" /></span></p>
-                    <span class="notice">${nn._([cms.global.PAGE_ID, 'poi-event', 'Invalid 9x9 URL, please try again.'])}</span>
+                    <p class="text"><span><input type="text" name="channelUrl" id="hyper_link" maxlength="100" value="${link}" placeholder="${nn._([cms.global.PAGE_ID, 'poi-event', 'Input FLIPr program or episode URL'])}" class="text" /></span></p>
+                    <span class="notice">${nn._([cms.global.PAGE_ID, 'poi-event', 'Invalid FLIPr URL, please try again.'])}</span>
                 </div>
             </div>
             <div class="func">
@@ -1027,7 +1027,7 @@
     </div>
     <div class="effect-container">
         <h5>${nn._([cms.global.PAGE_ID, 'title-card', 'Effect'])}</h5>
-        <p class="effect-demo"><span><em>9x9.tv</em></span></p>
+        <p class="effect-demo"><span><em>FLIPr.tv</em></span></p>
         <div class="select">
             <p class="select-btn"></p>
             {{if '' == effect}}
