--- a/episode-list.html
+++ b/episode-list.html
@@ -9,7 +9,7 @@
 <link rel="stylesheet" href="stylesheets/style.css?v=1278" />
 <link rel="stylesheet" href="stylesheets/lightbox.css?v=1278" />
 <link rel="stylesheet" href="stylesheets/episode.css?v=1278" />
-<title>9x9.tv - Episode list</title>
+<title>FLIPr.tv - Episode list</title>
 </head>
 <body>
 <div id="fb-root"></div>
@@ -18,8 +18,8 @@
 <div id="header">
     <a href="../" target="_blank" id="logo"></a>
     <ul id="nav">
-        <li id="home"><span><a href="../" target="_blank">9x9.tv Official Web</a></span></li>
-        <li id="tv"><span><a href="../tv" target="_blank">Watch 9x9.tv on the Web</a></span></li>
+        <li id="home"><span><a href="../" target="_blank">FLIPr.tv Official Web</a></span></li>
+        <li id="tv"><span><a href="../tv" target="_blank">Watch FLIPr.tv on the Web</a></span></li>
         <li id="profile">
             <p id="btn-profile"></p>
             <p id="selected-profile">Guest</p>
@@ -76,7 +76,7 @@
 <!-- Footer Layer Begin -->
 <p id="footer-control"></p>
 <div id="footer">
-    <span>© 2013 9x9.tv. All rights reserved.</span>
+    <span>© 2013 FLIPr.tv. All rights reserved.</span>
     <ul id="footer-list">
         <li id="language-change">
             <p class="select-txt"><a href="javascript:void(0);" id="language">English</a></p>
@@ -213,7 +213,7 @@
         <div class="input-gray">
             <p class="left"></p>
             <p class="center">
-                <input id="" class="textfield srul-text" value="http://www.9x9.tv/view?mso=${brand}&ch=xxxx&ep=xxxx" onclick="this.select()" />
+                <input id="" class="textfield srul-text" value="http://www.FLIPr.tv/view?mso=${brand}&ch=xxxx&ep=xxxx" onclick="this.select()" />
             </p>
             <p class="right"></p>
         </div>
@@ -252,7 +252,7 @@
                 </li>
                 <li>
                     <div class="img"><a href="epcurate-curation.html?cid=${id}"><img src="images/banner_04.png" alt="" width="781" height="274" /></a></div>
-                    <div class="desc"><p><span>{{html nn._([cms.global.PAGE_ID, 'episode-list', '<strong>Schedule your episodes,</strong> and 9x9 will publish the episodes automatically.'])}}</span></p></div>
+                    <div class="desc"><p><span>{{html nn._([cms.global.PAGE_ID, 'episode-list', '<strong>Schedule your episodes,</strong> and FLIPr will publish the episodes automatically.'])}}</span></p></div>
                 </li>
             </ul>
         </div>
@@ -327,9 +327,9 @@
                     <div class="select-gray" id="">
                         <div class="select-content-gray">
                             <p class="select-btn"></p>
-                            <p class="select-txt-gray">9x9.tv</p>
+                            <p class="select-txt-gray">FLIPr.tv</p>
                             <ul class="select-dropdown">
-                                <li class="on" data-meta="9x9.tv">9x9.tv</li>
+                                <li class="on" data-meta="FLIPr.tv">FLIPr.tv</li>
                                 <li data-meta="CTS">CTS</li>
                             </ul>
                         </div>
@@ -338,7 +338,7 @@
                     <div class="input-gray">
                         <p class="left"></p>
                         <p class="center">
-                            <input class="textfield srul-text" value="http://www.9x9.tv/view?mso={msoId}&ch=xxxx&ep=xxxx" onclick="this.select()" />
+                            <input class="textfield srul-text" value="http://www.FLIPr.tv/view?mso={msoId}&ch=xxxx&ep=xxxx" onclick="this.select()" />
                         </p>
                         <p class="right"></p>
                     </div>
