--- a/portal-manage.html
+++ b/portal-manage.html
@@ -11,17 +11,17 @@
 <link rel="stylesheet" href="stylesheets/uniform.css?v=1278" />
 <link rel="stylesheet" href="stylesheets/episode.css?v=1278" />
 <link rel="stylesheet" href="stylesheets/portal.css?v=1278" />
-<title>9x9.tv - Main Channels</title>
+<title>FLIPr.tv - Main Channels</title>
 </head>
 <body>
 <div id="fb-root"></div>
 
 <!-- Header Layer Begin -->
 <div id="header">
-    <a href="http://www.9x9.tv/" target="_blank" id="logo"></a>
+    <a href="http://www.FLIPr.tv/" target="_blank" id="logo"></a>
     <ul id="nav">
-        <li id="home"><span><a href="http://www.9x9.tv/" target="_blank">9x9.tv Official Web</a></span></li>
-        <li id="tv"><span><a href="http://www.9x9.tv/tv" target="_blank">Watch 9x9.tv on the Web</a></span></li>
+        <li id="home"><span><a href="../" target="_blank">FLIPr.tv Official Web</a></span></li>
+        <li id="tv"><span><a href="../tv" target="_blank">Watch FLIPr.tv on the Web</a></span></li>
         <li id="profile">
             <p id="btn-profile"></p>
             <p id="selected-profile">Guest</p>
@@ -123,7 +123,7 @@
 <!-- Footer Layer Begin -->
 <p id="footer-control"></p>
 <div id="footer">
-    <span>© 2013 9x9.tv. All rights reserved.</span>
+    <span>© 2013 FLIPr.tv. All rights reserved.</span>
     <ul id="footer-list">
         <li id="language-change">
             <p class="select-txt"><a href="javascript:void(0);" id="language">English</a></p>
