--- a/app-notification.html
+++ b/app-notification.html
@@ -15,17 +15,17 @@
     <link rel="stylesheet" href="stylesheets/jquery.datepick.css" />
     <link rel="stylesheet" href="stylesheets/cms-component.css" />
     <link rel="stylesheet" href="stylesheets/cms-notification.css" />
-<title>9x9.tv - App Notifiction</title>
+<title>FLIPr.tv - App Notifiction</title>
 </head>
 <body>
 <div id="fb-root"></div>
 
 <!-- Header Layer Begin -->
 <div id="header">
-    <a href="http://www.9x9.tv/" target="_blank" id="logo"></a>
+    <a href="http://www.FLIPr.tv/" target="_blank" id="logo"></a>
     <ul id="nav">
-        <li id="home"><span><a href="http://www.9x9.tv/" target="_blank">9x9.tv Official Web</a></span></li>
-        <li id="tv"><span><a href="http://www.9x9.tv/tv" target="_blank">Watch 9x9.tv on the Web</a></span></li>
+        <li id="home"><span><a href="../" target="_blank">FLIPr.tv Official Web</a></span></li>
+        <li id="tv"><span><a href="../tv" target="_blank">Watch FLIPr.tv on the Web</a></span></li>
         <li id="profile">
             <p id="btn-profile"></p>
             <p id="selected-profile">Guest</p>
@@ -92,7 +92,7 @@
 <!-- Footer Layer Begin -->
 <p id="footer-control"></p>
 <div id="footer">
-    <span>© 2013 9x9.tv. All rights reserved.</span>
+    <span>© 2013 FLIPr.tv. All rights reserved.</span>
     <ul id="footer-list">
         <li id="language-change">
             <p class="select-txt"><a href="javascript:void(0);" id="language">English</a></p>
@@ -228,7 +228,7 @@
                     <label for="run-app2" class="radio-btn">${nn._([cms.global.PAGE_ID, 'notification', 'Playback for a program or episode'])}</label>
                     <br>
 
-                    <input id="NotifyContent" type="text" placeholder="${nn._([cms.global.PAGE_ID, 'notification', 'Input 9x9 program or episode URL...'])}" style="display: none;">                                                
+                    <input id="NotifyContent" type="text" placeholder="${nn._([cms.global.PAGE_ID, 'notification', 'Input FLIPr program or episode URL...'])}" style="display: none;">                                                
                 </div> 
                 
             </div>
