--- a/channel-poi.html
+++ b/channel-poi.html
@@ -12,7 +12,7 @@
 <link rel="stylesheet" href="stylesheets/jquery.datepick.css?v=1278" />
 <link rel="stylesheet" href="stylesheets/perfect-scrollbar.css?v=1278" />
 <link rel="stylesheet" href="stylesheets/channel-poi.css?v=1278" />
-<title>9x9.tv - Program POI</title>
+<title>FLIPr.tv - Program POI</title>
 </head>
 <body>
 <div id="fb-root"></div>
@@ -21,8 +21,8 @@
 <div id="header">
     <a href="../" target="_blank" id="logo"></a>
     <ul id="nav">
-        <li id="home"><span><a href="../" target="_blank">9x9.tv Official Web</a></span></li>
-        <li id="tv"><span><a href="../tv" target="_blank">Watch 9x9.tv on the Web</a></span></li>
+        <li id="home"><span><a href="../" target="_blank">FLIPr.tv Official Web</a></span></li>
+        <li id="tv"><span><a href="../tv" target="_blank">Watch FLIPr.tv on the Web</a></span></li>
         <li id="profile">
             <p id="btn-profile"></p>
             <p id="selected-profile">Guest</p>
@@ -72,7 +72,7 @@
 <!-- Footer Layer Begin -->
 <p id="footer-control"></p>
 <div id="footer">
-    <span>© 2013 9x9.tv. All rights reserved.</span>
+    <span>© 2013 FLIPr.tv. All rights reserved.</span>
     <ul id="footer-list">
         <li id="language-change">
             <p class="select-txt"><a href="javascript:void(0);" id="language">English</a></p>
