--- a/cms-settings.html
+++ b/cms-settings.html
@@ -10,7 +10,7 @@
 <link rel="stylesheet" href="stylesheets/uniform.css?v=1278" />
 <link rel="stylesheet" href="stylesheets/cms-settings.css?v=1278" />
 <link rel="stylesheet" href="stylesheets/perfect-scrollbar.css?v=1278" />
-<title>9x9.tv - CMS Settings</title>
+<title>FLIPr.tv - CMS Settings</title>
 </head>
 <body>
 <div id="fb-root"></div>
@@ -19,8 +19,8 @@
 <div id="header">
     <a href="../" target="_blank" id="logo"></a>
     <ul id="nav">
-        <li id="home"><span><a href="../" target="_blank">9x9.tv Official Web</a></span></li>
-        <li id="tv"><span><a href="../tv" target="_blank">Watch 9x9.tv on the Web</a></span></li>
+        <li id="home"><span><a href="../" target="_blank">FLIPr.tv Official Web</a></span></li>
+        <li id="tv"><span><a href="../tv" target="_blank">Watch FLIPr.tv on the Web</a></span></li>
         <li id="profile">
             <p id="btn-profile"></p>
             <p id="selected-profile">Guest</p>
@@ -60,7 +60,7 @@
 <!-- Footer Layer Begin -->
 <p id="footer-control"></p>
 <div id="footer">
-    <span>© 2013 9x9.tv. All rights reserved.</span>
+    <span>© 2013 FLIPr.tv. All rights reserved.</span>
     <ul id="footer-list">
         <li id="language-change">
             <p class="select-txt"><a href="javascript:void(0);" id="language">English</a></p>
@@ -227,7 +227,7 @@
         <label>${nn._([cms.global.PAGE_ID, 'setting-form', 'Username'])}</label>
         <div class="fmfield">
             <p class="text{{if cms.global.USER_DATA.fbUser}} disable{{/if}}"><span><input type="text" name="username" id="username" maxlength="16" value="${cms.global.USER_DATA.name}"{{if cms.global.USER_DATA.fbUser}} readonly="readonly"{{/if}} class="text" /></span></p>
-            <p class="username-notice">${nn._([cms.global.PAGE_ID, 'setting-form', 'Username in 9x9 which is composed of 6-16 English letters, numbers or low line.'])}</p>
+            <p class="username-notice">${nn._([cms.global.PAGE_ID, 'setting-form', 'Username in FLIPr which is composed of 6-16 English letters, numbers or low line.'])}</p>
             <p class="notice letter-notice hide">${nn._([cms.global.PAGE_ID, 'setting-form', 'Only letters, numbers or low line are allowed.'])}</p>
             <p class="notice count-notice hide">${nn._([cms.global.PAGE_ID, 'setting-form', 'Please input 6 to 16 characters in username.'])}</p>
         </div>
