--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <link rel="stylesheet" href="stylesheets/lightbox.css?v=1278" />
 <link rel="stylesheet" href="stylesheets/channel.css?v=1278" />
 <link rel="stylesheet" href="stylesheets/com-9x9-cycle.css?v=1278" />
-<title>9x9.tv - My Programs</title>
+<title>FLIPr.tv - My Programs</title>
 </head>
 <body>
 <div id="fb-root"></div>
@@ -21,8 +21,8 @@
 <div id="header">
     <a href="../" target="_blank" id="logo"></a>
     <ul id="nav">
-        <li id="home"><span><a href="../" target="_blank">9x9.tv Official Web</a></span></li>
-        <li id="tv"><span><a href="../tv" target="_blank">Watch 9x9.tv on the Web</a></span></li>
+        <li id="home"><span><a href="../" target="_blank">FLIPr.tv Official Web</a></span></li>
+        <li id="tv"><span><a href="../tv" target="_blank">Watch FLIPr.tv on the Web</a></span></li>
         <li id="profile">
             <p id="btn-profile"></p>
             <p id="selected-profile">Guest</p>
@@ -142,7 +142,7 @@
 <!-- Footer Layer Begin -->
 <p id="footer-control"></p>
 <div id="footer">
-    <span>© 2013 9x9.tv. All rights reserved.</span>
+    <span>© 2013 FLIPr.tv. All rights reserved.</span>
     <ul id="footer-list">
         <li id="language-change">
             <p class="select-txt"><a href="javascript:void(0);" id="language">English</a></p>
@@ -247,7 +247,7 @@
         <div id="create-9x9-program" class="btn-large btn-create">
             <div class="left"></div>
             <div class="center">    
-                <p>{{html nn._([cms.global.PAGE_ID, 'overlay', '9x9<br />Program'])}}</p>
+                <p>{{html nn._([cms.global.PAGE_ID, 'overlay', 'FLIPr<br />Program'])}}</p>
                 <img src="images/icon_9x9.png" alt="">               
             </div>
             <div class="right"></div>
@@ -307,7 +307,7 @@
 <script id="lightbox-create-channel-tmpl" type="text/x-jquery-tmpl">
 <div id="lightbox-create-channel" class="lightbox-content">
     <h3 class="index-collect-title">${nn._(['overlay', 'channel-tutorial', 'Collect and Curate!'])}</h3>
-    <p class="desc">${nn._(['overlay', 'channel-tutorial', 'CMS is the management center for your 9x9.tv list-form programs!'])}</p>
+    <p class="desc">${nn._(['overlay', 'channel-tutorial', 'CMS is the management center for your FLIPr.tv list-form programs!'])}</p>
     <p class="create">
         <a >create
             <img src="images/icon_add.png" alt="" />
@@ -330,7 +330,7 @@
     <label for="filter_all" class="lbTypeLists checked">
         <input type="radio" name="filter" value="all" id="filter_all" class="lbTypeItem" checked> {{html nn._([cms.global.PAGE_ID, 'title-func', 'All'])}}</label>
     <label for="filter_9x9" class="lbTypeLists">
-        <input type="radio" name="filter" value="9x9" id="filter_9x9" class="lbTypeItem"> {{html nn._([cms.global.PAGE_ID, 'title-func', '9x9 programs'])}}</label>
+        <input type="radio" name="filter" value="9x9" id="filter_9x9" class="lbTypeItem"> {{html nn._([cms.global.PAGE_ID, 'title-func', 'FLIPr programs'])}}</label>
     <label for="filter_youtube" class="lbTypeLists">
         <input type="radio" name="filter" value="YoutubeSync" id="filter_youtube" class="lbTypeItem"> {{html nn._([cms.global.PAGE_ID, 'title-func', 'Youtube sync programs'])}}</label>
 </p>
@@ -358,7 +358,7 @@
         <div class="input-gray">
             <p class="left"></p>
             <p class="center">
-                <input id="" class="textfield srul-text" value="http://www.9x9.tv/view?brand=${brand}&ch=xxxx&ep=xxxx" onclick="this.select()" />
+                <input id="" class="textfield srul-text" value="http://www.FLIPr.tv/view?brand=${brand}&ch=xxxx&ep=xxxx" onclick="this.select()" />
             </p>
             <p class="right"></p>
         </div>
@@ -442,7 +442,7 @@
                                 <p id="" class="select-btn"></p>
                                 <p id="" class="select-txt-gray">9x9</p>
                                 <ul id="" class="select-dropdown">
-                                    <li class="on" data-meta="9x9.tv">9x9.tv</li>
+                                    <li class="on" data-meta="FLIPr.tv">FLIPr.tv</li>
                                     <li data-meta="CTS">CTS</li>
                                 </ul>
                             </div>
@@ -451,7 +451,7 @@
                         <div class="input-gray">
                             <p class="left"></p>
                             <p class="center">
-                                <input id="" class="textfield" value="http://www.9x9.tv/view?brand={msoId}&ch=xxxx&ep=xxxx" onclick="this.select()" />
+                                <input id="" class="textfield" value="http://www.FLIPr.tv/view?brand={msoId}&ch=xxxx&ep=xxxx" onclick="this.select()" />
                             </p>
                             <p class="right"></p>
                         </div>
