--- a/login.html
+++ b/login.html
@@ -2,12 +2,12 @@
 <html class="en" lang="en">
 <head>
 <meta charset="utf-8" />
-<title>9x9.tv - Login</title>
+<title>FLIPr.tv - Login</title>
 </head>
 <body>
 
 <form id="loginForm" name="loginForm" method="post" action="/api/login">
-<h1>9x9.tv Member Login</h1>
+<h1>FLIPr.tv Member Login</h1>
 <p>
 <label for="email">Email: <input type="text" name="email" id="email" value="" /></label>
 </p>
