--- a/signin.html
+++ b/signin.html
@@ -10,7 +10,7 @@
 <link rel="stylesheet" href="stylesheets/lightbox.css?v=1278" />
 <link rel="stylesheet" href="stylesheets/uniform.css?v=1278" />
 <link rel="stylesheet" href="stylesheets/signin.css?v=1278" />
-<title>9x9.tv - Sign In</title>
+<title>FLIPr.tv - Sign In</title>
 </head>
 <body>
 <div id="fb-root"></div>
@@ -19,8 +19,8 @@
 <div id="header">
     <a href="../" target="_blank" id="logo"></a>
     <ul id="nav">
-        <li id="home"><span><a href="../" target="_blank">9x9.tv Official Web</a></span></li>
-        <li id="tv"><span><a href="../tv" target="_blank">Watch 9x9.tv on the Web</a></span></li>
+        <li id="home"><span><a href="../" target="_blank">FLIPr.tv Official Web</a></span></li>
+        <li id="tv"><span><a href="../tv" target="_blank">Watch FLIPr.tv on the Web</a></span></li>
         <li id="profile">
             <p id="btn-profile"></p>
             <p id="selected-profile">Guest</p>
@@ -35,7 +35,7 @@
 <div id="login-layer">
     <div id="login-holder">
         <h1 class="langkey">Collect and Curate!</h1>
-        <h3 class="langkey">CMS is the management center for your 9x9.tv list-form programs!</h3>
+        <h3 class="langkey">CMS is the management center for your FLIPr.tv list-form programs!</h3>
         <h2 class="langkey">Sign In</h2>
         <form id="login-form">
             <div class="btn-fb">
@@ -130,7 +130,7 @@
                         <p class="right"></p>
                     </div>
                     <br />
-                    <p class="note langkey">Create a unique user name in 9x9 which composed of 6-16 English letters ,numbers or low line.</p>
+                    <p class="note langkey">Create a unique user name in FLIPr which composed of 6-16 English letters ,numbers or low line.</p>
                     <br />
                     <p class="msg-error langkey">
                         This email has been used.<br />
@@ -177,7 +177,7 @@
                 <p class="msg"><span class="langkey">Success!</span><br /><br />
                 <span class="langkey">You should receive an email shortly.</span><br />
                 <span class="langkey">If you still need assistance, please</span>
-                <a href="mailto:info@9x9.tv" class="langkey">contact us.</a></p>
+                <a href="mailto:info@FLIPr.tv" class="langkey">contact us.</a></p>
             </div>
         </div>
         <div class="r"></div>
@@ -236,7 +236,7 @@
 <!-- Footer Layer Begin -->
 <p id="footer-control"></p>
 <div id="footer">
-    <span>© 2013 9x9.tv. All rights reserved.</span>
+    <span>© 2013 FLIPr.tv. All rights reserved.</span>
     <ul id="footer-list">
         <li id="language-change">
             <p class="select-txt"><a href="javascript:void(0);" id="language">English</a></p>
