--- a/channel-setting.html
+++ b/channel-setting.html
@@ -20,8 +20,7 @@
 <div id="header">
     <a href="../" target="_blank" id="logo"></a>
     <ul id="nav">
-        <li id="home"><span><a href="../" target="_blank">FLIPr.tv Official Web</a></span></li>
-        <li id="tv"><span><a href="../tv" target="_blank">Watch FLIPr.tv on the Web</a></span></li>
+        <li id="tv"><span><a href="../" target="_blank">Link to FLIPr.tv</a></span></li>
         <li id="profile">
             <p id="btn-profile"></p>
             <p id="selected-profile">Guest</p>
