--- a/portal-manage.html
+++ b/portal-manage.html
@@ -313,7 +313,7 @@
 <li id="sch_${id}">
     <div class="thumb">
         <div id="schk_${id}" class="checkbox{{if alreadyAdd === true}} hide{{/if}}"></div>
-        <a href="${cms.config.API_BASE}/view?mso=${msoName}&ch=${id}" target="_blank">
+        <a href="${cms.global.SHARE_URL_BASE}/view/p${id}" target="_blank">
             <img src="images/icon_playlist.png" alt="" class="watermark" />
         </a>
         <div class="ch">
@@ -395,7 +395,7 @@ ${nn._([cms.global.PAGE_ID, 'channel-list', 'Sorted by'])} :
                 </div>
                 <div class="tip-top"></div>
             </div>
-            <a href="${cms.config.API_BASE}/view?mso=${msoName}&ch=${id}" target="_blank">
+            <a href="${cms.global.SHARE_URL_BASE}/view/p${id}" target="_blank">
                 <img class="watermark" alt="" src="images/icon_playlist.png" />
             </a>
             <div class="ch">
@@ -427,7 +427,7 @@ ${nn._([cms.global.PAGE_ID, 'channel-list', 'Sorted by'])} :
                 </div>
                 <div class="tip-top"></div>
             </div>
-            <a href="${cms.config.API_BASE}/view?mso=${msoName}&ch=${id}" target="_blank">
+            <a href="${cms.global.SHARE_URL_BASE}/view/p${id}" target="_blank">
                 <img class="watermark" alt="" src="images/icon_playlist.png" />
             </a>
             <div class="ch">
