--- a/store-manage.html
+++ b/store-manage.html
@@ -305,7 +305,7 @@
                 </div>
                 <div class="tip-top"></div>
             </div>
-            <a href="${cms.config.API_BASE}/view?mso=${msoName}&ch=${id}" target="_blank">
+            <a href="${cms.global.SHARE_URL_BASE}/view/p${id}" target="_blank">
                 <img class="watermark" alt="" src="images/icon_playlist.png" />
             </a>
             <div class="ch">
@@ -346,7 +346,7 @@
                 </div>
                 <div class="tip-top"></div>
             </div>
-            <a href="${cms.config.API_BASE}/view?mso=${msoName}&ch=${id}" target="_blank">
+            <a href="${cms.global.SHARE_URL_BASE}/view/p${id}" target="_blank">
                 <img class="watermark" alt="" src="images/icon_playlist.png" />
             </a>
             <div class="ch">
