--- a/episode-list.html
+++ b/episode-list.html
@@ -352,7 +352,7 @@
                 <div class="img-container">
                     <div class="img-wrap">
                         {{if null != publishDate}}
-                            <a href="${playbackUrl}" target="_blank">
+                            <a href="${cms.global.SHARE_URL_BASE}/view/p${channelId}/e${id}" target="_blank">
                             <img src="images/icon_playlist.png" alt="" class="watermark" />
                             <img src="${imageUrl}" alt="" class="photo" />
                             </a>
@@ -372,7 +372,7 @@
                 </div>
                 <div class="tip-bottom"></div>
             </div>
-            <h3><a href="${playbackUrl}" target="_blank">${name}</a></h3>
+            <h3><a href="${cms.global.SHARE_URL_BASE}/view/p${channelId}/e${id}" target="_blank">${name}</a></h3>
             <div class="btns">
                 <div class="btn-wrap enable">
                     <ul>
