--- a/portal-manage.html
+++ b/portal-manage.html
@@ -374,14 +374,19 @@ ${nn._([cms.global.PAGE_ID, 'channel-list', 'Sorted by'])} :
 
 <!-- portal-set-chanels-tmpl Begin -->
 <script id="portal-set-chanels-tmpl" type="text/x-jquery-tmpl">
-{{if alwaysOnTop == true}}
     <li id="set_${id}" class="itemList notSortable">
         <div class="thumb">
-            <div class="btn-top on">
+            <div class="btn-top{{if alwaysOnTop == true}} on{{/if}}">
                 <div class="icon-holder"></div>
                 <div class="tip-white">
                     <p class="left"></p>
-                    <p class="center">${nn._([cms.global.PAGE_ID, 'channel-list', 'Remove from top'])}</p>
+                    <p class="center">
+                    	{{if alwaysOnTop == true}}
+                    		${nn._([cms.global.PAGE_ID, 'channel-list', 'Remove from top'])}
+                    	{{else}}
+                    		${nn._([cms.global.PAGE_ID, 'channel-list', 'Set on top'])}
+                    	{{/if}}
+                    </p>
                     <p class="right"></p>
                 </div>
                 <div class="tip-top"></div>
@@ -406,39 +411,6 @@ ${nn._([cms.global.PAGE_ID, 'channel-list', 'Sorted by'])} :
         </div>
         <p class="ch-title" title="${name}">${name}</p>
     </li>
-{{else}}
-    <li gg="${updateDate}" id="set_${id}" class="itemList isSortable">
-        <div class="thumb">
-            <div class="btn-top">
-                <div class="icon-holder"></div>
-                <div class="tip-white">
-                    <p class="left"></p>
-                    <p class="center">${nn._([cms.global.PAGE_ID, 'channel-list', 'Set on top'])}</p>
-                    <p class="right"></p>
-                </div>
-                <div class="tip-top"></div>
-            </div>
-            <div class="btn-remove">
-                <div class="icon-holder"></div>
-                <div class="tip-white">
-                    <p class="left"></p>
-                    <p class="center">${nn._([cms.global.PAGE_ID, 'channel-list', 'Remove program'])}</p>
-                    <p class="right"></p>
-                </div>
-                <div class="tip-top"></div>
-            </div>
-            <a href="${cms.global.SHARE_URL_BASE}/view/p${id}" target="_blank">
-                <img class="watermark" alt="" src="images/icon_playlist.png" />
-            </a>
-            <div class="ch">
-                <div class="img">
-                    <img src="${imageUrl}" alt="" />
-                </div>
-            </div>
-        </div>
-        <p class="ch-title" title="${name}">${name}</p>
-    </li>
-{{/if}}
 </script>
 <!-- portal-set-chanels-tmpl End -->
 
